<resources>
    <string name="app_name">khipro</string>
    <string name="app_title">Khipro Keyboard</string>
    <string name="instruction_text">কীবোর্ডটি ব্যবহার করতে নিচের ধাপগুলো অনুসরণ করুন:</string>
    <string name="btn_enable_text">১. কীবোর্ড সক্রিয় করুন</string>
    <string name="btn_select_text">২. কীবোর্ড নির্বাচন করুন</string>

    <string name="key_q">q</string>
    <string name="key_w">w</string>
    <string name="key_e">e</string>
    <string name="key_r">r</string>
    <string name="key_t">t</string>
    <string name="key_y">y</string>
    <string name="key_u">u</string>
    <string name="key_i">i</string>
    <string name="key_o">o</string>
    <string name="key_p">p</string>
    <string name="key_a">a</string>
    <string name="key_s">s</string>
    <string name="key_d">d</string>
    <string name="key_f">f</string>
    <string name="key_g">g</string>
    <string name="key_h">h</string>
    <string name="key_j">j</string>
    <string name="key_k">k</string>
    <string name="key_l">l</string>
    <string name="key_z">z</string>
    <string name="key_x">x</string>
    <string name="key_c">c</string>
    <string name="key_v">v</string>
    <string name="key_b">b</string>
    <string name="key_n">n</string>
    <string name="key_m">m</string>

    <string name="key_shift">⇧</string>
    <string name="key_delete">⌫</string>
    <string name="key_symbols">123</string>
    <string name="key_lang">🌐 EN</string>
    <string name="key_space">Space</string>
    <string name="key_comma">,</string>
    <string name="key_dot">.</string>
    <string name="key_enter">↵</string>
</resources>